*fix: word-wrap changes

--- a/doc2/private/style/main/main.scss
+++ b/doc2/private/style/main/main.scss
@@ -73,7 +73,6 @@
       color: $default-text-color;
       font-size: 30px;
       font-weight: 400;
-      word-break: break-all;
       &:hover {
         opacity: 0.8;
       }
@@ -86,7 +85,6 @@
       line-height: 24px;
       font-weight: 400;
       font-size: 14px;
-      word-break: break-word;
     }
 
     // modificators
