--- a/doc2/private/style/style.scss
+++ b/doc2/private/style/style.scss
@@ -2,7 +2,8 @@
 
 html {
   scroll-behavior: smooth;
-  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-wrap: break-word;
 }
 
 body {
